--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>3D Carousel</title>
   <link rel='stylesheet' href='https://raw.githubusercontent.com/JohnBlazek/codepen-resources/master/3d-carousel/css/stylesheet.css'>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="dist/style.css">
 
 </head>
 
@@ -17,7 +17,7 @@
       <figure id="item1" class="carouselItem trans3d">
         <div class="carouselItemInner trans3d">
           <a href="https://www.youtube.com/watch?v=b4-tObGOpDQ">
-            <img src="../images/Gallery.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
+            <img src="images/Gallery.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
           </a>
           <p>Gallery</p>
         </div>
@@ -25,7 +25,7 @@
       <figure id="item2" class="carouselItem trans3d">
         <div class="carouselItemInner trans3d">
           <a href="https://bit.ly/3KkzaxY">
-            <img src="../images/Program.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
+            <img src="images/Program.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
           </a>
           <p>Program</p>
         </div>
@@ -33,14 +33,14 @@
       <figure id="item3" class="carouselItem trans3d">
         <div class="carouselItemInner trans3d">
           <a href="https://bit.ly/3ArYwED">
-            <img src="../images/Photobooth 1.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
+            <img src="images/Photobooth 1.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
           </a>
           <p>Photobooth 1</p>
         </div>
       </figure>
       <figure id="item4" class="carouselItem trans3d">
         <div class="carouselItemInner trans3d"> <a href="https://bit.ly/3ArYwED">
-            <img src="../images/Photobooth 2.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
+            <img src="images/Photobooth 2.jpg" alt="HTML tutorial" style="max-width:100%;max-height:100%;">
           </a>
           <p>Photobooth 2</p>
         </div>
@@ -51,7 +51,7 @@
   <script src='https://raw.githubusercontent.com/JohnBlazek/codepen-resources/master/3d-carousel/js/libs.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-  <script src="./script.js"></script>
+  <script src="dist/script.js"></script>
 
 </body>
 
